Policies/deny-force-delete/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: deny-zero-grace-delete
policies:
- ../deny-force-delete.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: deny-zero-grace-delete
  resources:
  - badpod01
  result: fail
  rule: deny-zero-grace-delete
- kind: Deployment
  policy: deny-zero-grace-delete
  resources:
  - baddeployment01
  result: fail
  rule: deny-zero-grace-delete
- kind: CronJob
  policy: deny-zero-grace-delete
  resources:
  - badcronjob01
  result: fail
  rule: deny-zero-grace-delete
- kind: Pod
  policy: deny-zero-grace-delete
  resources:
  - goodpod01
  result: pass
  rule: deny-zero-grace-delete
- kind: Deployment
  policy: deny-zero-grace-delete
  resources:
  - gooddeployment01
  result: pass
  rule: deny-zero-grace-delete
- kind: CronJob
  policy: deny-zero-grace-delete
  resources:
  - goodcronjob01
  result: pass
  rule: deny-zero-grace-delete
variables: values.yaml
# # - values2.yaml
userinfo: user_info_cluster-admin.yaml
